[gd_scene load_steps=6 format=3 uid="uid://bww7twj5qeon2"]

[ext_resource type="Script" path="res://main.gd" id="1_mkuq4"]
[ext_resource type="PackedScene" uid="uid://b03rirtespbhc" path="res://line_edit.tscn" id="2_4ej14"]
[ext_resource type="Shader" path="res://main.gdshader" id="2_ud4us"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_70vrq"]
shader = ExtResource("2_ud4us")
shader_parameter/bg_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q322o"]
shader = ExtResource("2_ud4us")
shader_parameter/bg_color = null

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_mkuq4")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_70vrq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="HBox" type="HBoxContainer" parent="."]
material = SubResource("ShaderMaterial_q322o")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Menu" type="VBoxContainer" parent="HBox/MarginContainer"]
visible = false
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Clear" type="Button" parent="HBox/MarginContainer/Menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "CLEAR"

[node name="Translate" type="HBoxContainer" parent="HBox/MarginContainer/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="HBox/MarginContainer/Menu/Translate"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "TRANSLATION	
"
horizontal_alignment = 1

[node name="dx" parent="HBox/MarginContainer/Menu/Translate" instance=ExtResource("2_4ej14")]
layout_mode = 2
placeholder_text = "dx"

[node name="dy" parent="HBox/MarginContainer/Menu/Translate" instance=ExtResource("2_4ej14")]
layout_mode = 2
placeholder_text = "dy"

[node name="dz" parent="HBox/MarginContainer/Menu/Translate" instance=ExtResource("2_4ej14")]
layout_mode = 2
placeholder_text = "dz"

[node name="ApplyTrans" type="Button" parent="HBox/MarginContainer/Menu/Translate"]
layout_mode = 2
text = "APPLY"

[node name="Rotate" type="HBoxContainer" parent="HBox/MarginContainer/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="HBox/MarginContainer/Menu/Rotate"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "ROTATION
"
horizontal_alignment = 1

[node name="ox" parent="HBox/MarginContainer/Menu/Rotate" instance=ExtResource("2_4ej14")]
layout_mode = 2
placeholder_text = "Ox"

[node name="oy" parent="HBox/MarginContainer/Menu/Rotate" instance=ExtResource("2_4ej14")]
layout_mode = 2
placeholder_text = "Oy"

[node name="oz" parent="HBox/MarginContainer/Menu/Rotate" instance=ExtResource("2_4ej14")]
layout_mode = 2
placeholder_text = "Oz"

[node name="ApplyRotate" type="HBoxContainer" parent="HBox/MarginContainer/Menu"]
layout_mode = 2

[node name="ApplyRot" type="Button" parent="HBox/MarginContainer/Menu/ApplyRotate"]
layout_mode = 2
text = "ROTATE"

[node name="ApplyRotCenter" type="Button" parent="HBox/MarginContainer/Menu/ApplyRotate"]
layout_mode = 2
text = "ROTATE CENTER"

[node name="RotateLine" type="HBoxContainer" parent="HBox/MarginContainer/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="HBox/MarginContainer/Menu/RotateLine"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "ROTATION
(LINE)
"
horizontal_alignment = 1

[node name="x1" parent="HBox/MarginContainer/Menu/RotateLine" instance=ExtResource("2_4ej14")]
layout_mode = 2
placeholder_text = "x1"

[node name="y1" parent="HBox/MarginContainer/Menu/RotateLine" instance=ExtResource("2_4ej14")]
layout_mode = 2
placeholder_text = "y1"

[node name="z1" parent="HBox/MarginContainer/Menu/RotateLine" instance=ExtResource("2_4ej14")]
layout_mode = 2
placeholder_text = "z1"

[node name="x2" parent="HBox/MarginContainer/Menu/RotateLine" instance=ExtResource("2_4ej14")]
layout_mode = 2
placeholder_text = "x2"

[node name="y2" parent="HBox/MarginContainer/Menu/RotateLine" instance=ExtResource("2_4ej14")]
layout_mode = 2
placeholder_text = "y2"

[node name="z2" parent="HBox/MarginContainer/Menu/RotateLine" instance=ExtResource("2_4ej14")]
layout_mode = 2
placeholder_text = "z2"

[node name="deg" parent="HBox/MarginContainer/Menu/RotateLine" instance=ExtResource("2_4ej14")]
layout_mode = 2
placeholder_text = "deg"

[node name="ApplyRotateLine" type="Button" parent="HBox/MarginContainer/Menu/RotateLine"]
layout_mode = 2
text = "APPLY"

[node name="Scale" type="HBoxContainer" parent="HBox/MarginContainer/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="HBox/MarginContainer/Menu/Scale"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "SCALE"
horizontal_alignment = 1

[node name="mx" parent="HBox/MarginContainer/Menu/Scale" instance=ExtResource("2_4ej14")]
layout_mode = 2
placeholder_text = "Ox"

[node name="my" parent="HBox/MarginContainer/Menu/Scale" instance=ExtResource("2_4ej14")]
layout_mode = 2
placeholder_text = "Oy"

[node name="mz" parent="HBox/MarginContainer/Menu/Scale" instance=ExtResource("2_4ej14")]
layout_mode = 2
placeholder_text = "Oz"

[node name="ApplyScale" type="HBoxContainer" parent="HBox/MarginContainer/Menu"]
layout_mode = 2

[node name="ApplyScale" type="Button" parent="HBox/MarginContainer/Menu/ApplyScale"]
layout_mode = 2
text = "SCALE"

[node name="ApplyScaleCenter" type="Button" parent="HBox/MarginContainer/Menu/ApplyScale"]
layout_mode = 2
text = "SCALE CENTER"

[node name="Mirror" type="HBoxContainer" parent="HBox/MarginContainer/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="HBox/MarginContainer/Menu/Mirror"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "MIRROR"
horizontal_alignment = 1

[node name="ox" type="Button" parent="HBox/MarginContainer/Menu/Mirror"]
custom_minimum_size = Vector2(66, 50)
layout_mode = 2
text = "XY"

[node name="oy" type="Button" parent="HBox/MarginContainer/Menu/Mirror"]
custom_minimum_size = Vector2(66, 50)
layout_mode = 2
text = "XZ"

[node name="oz" type="Button" parent="HBox/MarginContainer/Menu/Mirror"]
custom_minimum_size = Vector2(66, 50)
layout_mode = 2
text = "YZ"

[node name="Menu2" type="VBoxContainer" parent="HBox/MarginContainer"]
layout_mode = 2

[node name="Clear" type="Button" parent="HBox/MarginContainer/Menu2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "CLEAR"

[node name="Point" type="HBoxContainer" parent="HBox/MarginContainer/Menu2"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="HBox/MarginContainer/Menu2/Point"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "DRAW POINTS"

[node name="HBoxContainer" type="HBoxContainer" parent="HBox/MarginContainer/Menu2"]
layout_mode = 2

[node name="Label" type="Label" parent="HBox/MarginContainer/Menu2/HBoxContainer"]
layout_mode = 2
text = "DIVISIONS"

[node name="Divisions" parent="HBox/MarginContainer/Menu2/HBoxContainer" instance=ExtResource("2_4ej14")]
layout_mode = 2
text = "10"

[node name="OptionButton" type="OptionButton" parent="HBox/MarginContainer/Menu2"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "YZ"
popup/item_1/text = "XZ"
popup/item_1/id = 1
popup/item_2/text = "XY"
popup/item_2/id = 2

[node name="Create" type="Button" parent="HBox/MarginContainer/Menu2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "CREATE"

[node name="Menu3" type="VBoxContainer" parent="HBox/MarginContainer"]
visible = false
layout_mode = 2

[node name="Clear" type="Button" parent="HBox/MarginContainer/Menu3"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "CLEAR"

[node name="HBoxContainer" type="HBoxContainer" parent="HBox/MarginContainer/Menu3"]
layout_mode = 2

[node name="Point" type="HBoxContainer" parent="HBox/MarginContainer/Menu3/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBox/MarginContainer/Menu3/HBoxContainer/Point"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "BORDER"
horizontal_alignment = 1

[node name="x0" parent="HBox/MarginContainer/Menu3/HBoxContainer/Point" instance=ExtResource("2_4ej14")]
layout_mode = 2
text = "-10"
placeholder_text = "x0"

[node name="x1" parent="HBox/MarginContainer/Menu3/HBoxContainer/Point" instance=ExtResource("2_4ej14")]
layout_mode = 2
text = "10"
placeholder_text = "x1"

[node name="y0" parent="HBox/MarginContainer/Menu3/HBoxContainer/Point" instance=ExtResource("2_4ej14")]
layout_mode = 2
text = "-10"
placeholder_text = "y0"

[node name="y1" parent="HBox/MarginContainer/Menu3/HBoxContainer/Point" instance=ExtResource("2_4ej14")]
layout_mode = 2
text = "10"
placeholder_text = "y1"

[node name="Label" type="Label" parent="HBox/MarginContainer/Menu3/HBoxContainer"]
layout_mode = 2
text = "STEP"

[node name="Step" parent="HBox/MarginContainer/Menu3/HBoxContainer" instance=ExtResource("2_4ej14")]
layout_mode = 2
text = "0.5"

[node name="FunctionButton" type="OptionButton" parent="HBox/MarginContainer/Menu3"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "cos(x+y)"
popup/item_1/text = "cos(x*x+y *y)/(x*x+y*y+1)"
popup/item_1/id = 1

[node name="CreateF" type="Button" parent="HBox/MarginContainer/Menu3"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "CREATE"

[node name="MarginContainer2" type="MarginContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBox/MarginContainer2"]
layout_mode = 2

[node name="Change" type="OptionButton" parent="HBox/MarginContainer2/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "ROTATION"
popup/item_1/text = "FUNCTION"
popup/item_1/id = 1
popup/item_2/text = "AFFINE"
popup/item_2/id = 2

[node name="OptionButton2" type="OptionButton" parent="HBox/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
selected = 0
item_count = 2
popup/item_0/text = "Isometric"
popup/item_1/text = "Perspective"
popup/item_1/id = 1

[node name="CheckBox" type="CheckBox" parent="HBox/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "AUTO ROTATE"

[node name="Save" type="Button" parent="HBox/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "SAVE TO FILE"

[node name="Load" type="Button" parent="HBox/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "LOAD FILE"

[node name="SaveFileDialog" type="FileDialog" parent="HBox/MarginContainer2/VBoxContainer"]
size = Vector2i(303, 180)
access = 2
filters = PackedStringArray("*.obj")
use_native_dialog = true

[node name="LoadFileDialog" type="FileDialog" parent="HBox/MarginContainer2/VBoxContainer"]
auto_translate_mode = 1
title = "Open a File"
size = Vector2i(303, 180)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.obj")
use_native_dialog = true

[connection signal="pressed" from="HBox/MarginContainer/Menu/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="HBox/MarginContainer/Menu/Translate/ApplyTrans" to="." method="_on_apply_trans_pressed"]
[connection signal="pressed" from="HBox/MarginContainer/Menu/ApplyRotate/ApplyRot" to="." method="_on_apply_rot_pressed"]
[connection signal="pressed" from="HBox/MarginContainer/Menu/ApplyRotate/ApplyRotCenter" to="." method="_on_apply_rot_center_pressed"]
[connection signal="pressed" from="HBox/MarginContainer/Menu/RotateLine/ApplyRotateLine" to="." method="_on_apply_rotate_line_pressed"]
[connection signal="pressed" from="HBox/MarginContainer/Menu/ApplyScale/ApplyScale" to="." method="_on_apply_scale_pressed"]
[connection signal="pressed" from="HBox/MarginContainer/Menu/ApplyScale/ApplyScaleCenter" to="." method="_on_apply_scale_center_pressed"]
[connection signal="pressed" from="HBox/MarginContainer/Menu/Mirror/ox" to="." method="_on_mirror_ox_pressed"]
[connection signal="pressed" from="HBox/MarginContainer/Menu/Mirror/oy" to="." method="_on_mirror_oy_pressed"]
[connection signal="pressed" from="HBox/MarginContainer/Menu/Mirror/oz" to="." method="_on_mirror_oz_pressed"]
[connection signal="pressed" from="HBox/MarginContainer/Menu2/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="HBox/MarginContainer/Menu2/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="HBox/MarginContainer/Menu3/Clear" to="." method="_on_clear_pressed"]
[connection signal="item_selected" from="HBox/MarginContainer/Menu3/FunctionButton" to="." method="_on_function_button_item_selected"]
[connection signal="pressed" from="HBox/MarginContainer/Menu3/CreateF" to="." method="_on_create_f_pressed"]
[connection signal="item_selected" from="HBox/MarginContainer2/VBoxContainer/Change" to="." method="_on_change_item_selected"]
[connection signal="item_selected" from="HBox/MarginContainer2/VBoxContainer/OptionButton2" to="." method="_on_option_button_2_item_selected"]
[connection signal="toggled" from="HBox/MarginContainer2/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="HBox/MarginContainer2/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="HBox/MarginContainer2/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="file_selected" from="HBox/MarginContainer2/VBoxContainer/SaveFileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="HBox/MarginContainer2/VBoxContainer/LoadFileDialog" to="." method="_on_load_file_dialog_file_selected"]
